<resources>
    <string name="app_name">RemoteLogin</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="ip">172.20.10.5</string>
    <string name="dbName">ms</string>
    <string name="port">3306</string>
    <string name="user_id">jason</string>
    <string name="password">123456</string>
    <string name="user_name">用户名</string>
    <string name="password_text">密码</string>
    <string name="register">注册</string>
    <string name="login_text">登录</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="check">check</string>
    <string name="textview1">id:</string>
    <string name="textview2">name:</string>
    <string name="textview3">sex:</string>
    <string name="textview4">room_number:</string>
    <string name="textview5">phone_number</string>
    <string name="textview6">total_pay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">电话号码</string>
    <string name="room_number">房间号</string>
    <string name="total_pay">总缴费</string>
    <string name="pay">pay</string>
    <string name="action_settings">Settings</string>
    <string name="tab_menu_alert">提醒</string>
    <string name="tab_menu_profile">信息</string>
    <string name="tab_menu_pay">我的</string>
    <string name="tab_menu_setting">设置</string>
    <string name="changePassword">修改密码</string>
    <string name="originPassword">原密码</string>
    <string name="newPassword">新密码</string>
    <string name="repeatNewPassword">重复新密码</string>
    <string name="change">修改</string>
    <string name="record_pay">记录</string>
    <string name="pay_cash">金额</string>
    <string name="show_pay_txt">缴费操作</string>
    <string name="user_input_cash_to_pay">请输入缴费金额</string>
    <string name="text">Type comment here</string>
</resources>